# FYP-Vulkan-Renderer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  imgui.ini  index.html  index_light_410090.html  raiju_wiki_index.html  vcpkg-configuration.json  vcpkg.json
.claude/: CLAUDE.md
.github/workflows/: build.yml  release.yml
.zed/: tasks.json
docs/: Doxyfile  FYP Project Definition.docx  Log.txt  RELEASE.md
docs/Dev-Log/: 2026-03-28.md  2026-03-29.md
docs/FYP-Vault/: Home.md  README.md
docs/FYP-Vault/.obsidian/: workspace.json
docs/FYP-Vault/00-Inbox/: M2-Plan-Of-Attack.md  VulkanContext-Implementation-Guide.md
docs/FYP-Vault/01-Plans/: M2-Rotating-Cube.md  Week-1-Day-3-Plan.md
docs/FYP-Vault/02-Dev-Log/: 2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-04-01.md  2026-04-02.md  2026-04-10.md  2026-04-11.md  template.md
docs/FYP-Vault/03-Learnings/: 03-VkInstance-Init.md  M1-Plan-Of-Attack.md  Vulkan-M1-Deep-Dive.md  Vulkan-Object-Chain.md
docs/FYP-Vault/Canvas/: UML-Class-Diagram.canvas
docs/FYP-Vault/Dev-Log/: 2026-03-29.md  2026-03-30.md  template.md
docs/FYP-Vault/Images/: UML-Class-Diagram.excalidraw
docs/FYP-Vault/Learnings/: Learnings1.md
docs/FYP-Vault/Plan/: Week 1 Day 3 Plan.md
docs/FYP-Vault/Research/: Gaussian-Splatting.md  My Candidate PhD Directions in Neural Rendering Focused on Triangle Meshes, Materials, and Lighting.md  Neural Rendering A Comprehensive Scientific Literature ReviewExecutive Summary.md  Neural Rendering Insights.md  Neural Rendering Potential Literature Review & Gap.md  PBR-Shading.md
docs/dev-log/: gaussian-splat-stretch-goal.md
docs/wiki/: api-map.html  architecture.html  assets-shaders.html  getting-started.html  index.html  rendering-loop.html  troubleshooting.html  wiki.css
shaders/: mesh.frag  mesh.vert  pbr.frag  splat.frag  splat.vert  triangle.frag  triangle.vert
src/: GaussianSplat.cpp  GaussianSplat.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  VmaImplementation.cpp  VulkanContext.cpp  VulkanContext.h  application.cpp  application.hpp  frame_data.cpp  frame_data.hpp  gaussian_splat.cpp  gaussian_splat.hpp  gpu_buffer.cpp  gpu_buffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  main.cpp  mesh.cpp  mesh.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  vulkan_context.cpp  vulkan_context.hpp  window.cpp  window.hpp
src/AssetLoader/: AssetData.h  GpuUploader.cpp  GpuUploader.h  ObjLoader.cpp  ObjLoader.h  TextureLoader.cpp  TextureLoader.h
